--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "php": ">=5.6.0",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
+        "kartik-v/yii2-widget-select2": "@dev",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0"
     },
     "require-dev": {
@@ -28,6 +29,7 @@
         "codeception/module-yii2": "^1.0",
         "codeception/module-filesystem": "^1.0",
         "codeception/verify": "~0.5.0 || ~1.1.0",
+        "phpoffice/phpexcel": "dev-develop",
         "symfony/browser-kit": ">=2.7 <=4.2.4"
     },
     "config": {
